--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "form-data": "^4.0.0",
     "generate-password": "^1.7.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
     "otp-generator": "^4.0.0",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0",
     "winston": "^3.6.0"
   }
