--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
+    "nodemailer-express-handlebars": "^4.0.0",
     "otp-generator": "^4.0.0",
     "sequelize": "^6.17.0",
     "winston": "^3.6.0"
