--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
+    "firebase-admin": "^10.2.0",
     "form-data": "^4.0.0",
     "generate-password": "^1.7.0",
     "html-pdf": "^3.0.1",
